--- a/deeplearningworkshop.html
+++ b/deeplearningworkshop.html
@@ -137,7 +137,6 @@
 "h3 card-header text-center bg-success text-white"
 >Forward propagation</div>
         <div class="m-4">
-
             <img src="/static/images/neural_network_example.png" width="80%"><br>
             <div class="h5 text-center text-secondary small">neuralnetworksanddeeplearning.com</div><br>
 
@@ -623,6 +622,7 @@
     <div class="m-4">
 
         <ul class="list-group">
+            <li class="list-group-item">Parameters notation in complex networks</li>
             <li class="list-group-item">One-hot encoding</li>
             <li class="list-group-item">Computing cost over multiple outputs</li>
         </ul>
@@ -640,7 +640,6 @@
 
         <ul class="list-group">
             <li class="list-group-item">Cost derivative w.r.t. hidden node activation</li>
-            <li class="list-group-item">Parameters notation for complex networks</li>
             <li class="list-group-item">Compute layer error on node with multiple children</li>
         </ul>
     </div>
