--- a/deeplearningworkshop.html
+++ b/deeplearningworkshop.html
@@ -2016,7 +2016,7 @@
     <hr>
     $$ e^{z_i} \ge 0 $$
     $$ \sum_{j} e^{z_j} \ge 0 $$
-    $$ e^{z_i} \le e^{z_j} $$
+    $$ e^{z_i} \le \sum_{j} e^{z_j} $$
     $$ a_i \in \lt 0, 1 \gt $$
 
     <hr>
