added clean code course button to index page

--- a/index.html
+++ b/index.html
@@ -33,6 +33,14 @@
                     </div>
                 </div>
 
+                <br>
+
+                <div class="row text-center">
+                    <div class="col">
+                        <a href="/clean_code_course.html" class="btn btn-primary btn-lg" role="button">Clean Code Course</a>
+                    </div>
+                </div>
+
             </div>
             <br>
 
