--- a/deeplearningworkshop.html
+++ b/deeplearningworkshop.html
@@ -38,11 +38,12 @@
 
     <div class=
 "h3 card-header text-center bg-success text-white"
->Kuba Kolodziejczyk</div>
+>Profile</div>
 
     <div class="row">
         <div class="col-md-8">
             <div class="m-4 h4">
+                <strong>名前:</strong> Kuba Kolodziejczyk<br>
                 <strong>出身:</strong> ポーランド<br>
                 <strong>大学:</strong> ロンドン大学, 大阪大学<br><br>
 
