--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Deep Learning Foundation</title>
+    <title>Kuba Kolodziejczyk, AI Okinawa</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/darcula.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
@@ -25,27 +25,46 @@
     <br><br>
     <div class="container">
 
-            <div class="m-4">
+        <div class="m-4">
 
-                <div class="row text-center">
+            <ul class="list-group">
+                <div class="caption text-center h2">Courses</div>
+                <li class="list-group-item">
                     <div class="col">
-                        <a href="/deeplearningworkshop.html" class="btn btn-primary btn-lg" role="button">Deep Learning Workshop</a>
+                        <a href="/deeplearningworkshop.html">Deep Learning Workshop</a>
                     </div>
-                </div>
-
-                <br>
-
-                <div class="row text-center">
+                </li>
+                <li class="list-group-item">
                     <div class="col">
-                        <a href="/clean_code_course.html" class="btn btn-primary btn-lg" role="button">Clean Code Course</a>
+                        <a href="/clean_code_course.html">Clean Code Course</a>
                     </div>
-                </div>
+                </li>
+            </ul>
 
-            </div>
-            <br>
+            <br><br>
+
+            <ul class="list-group">
+                <div class="caption text-center h2">Presentations</div>
+                <li class="list-group-item">
+                    <div class="col">
+                        <a href="/detecting_small_objects.html">Detecting small objects</a>
+                    </div>
+                </li>
+            </ul>
+
+
+        </div>
+        <br>
+            
+
 
     </div>
     <br><br>
+
+    <div class="footer text-center text-secondary m-2">
+        kuba@aiokinawa.com<br>
+        Artificial Intelligence Consulting
+    </div>
 
 </body>
 </html>
