--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
                         <a href="/clean_code_course.html">Clean Code Course</a>
                     </div>
                 </li>
+                <li class="list-group-item">
+                    <div class="col">
+                        <a href="/software_development_best_practices_course.html">Software Development Best Practices</a>
+                    </div>
+                </li>
             </ul>
 
             <br><br>
