--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <div class="caption text-center h2">Courses</div>
                 <li class="list-group-item">
                     <div class="col">
-                        <a href="/deeplearningworkshop.html">Deep Learning Workshop</a>
+                        <a href="/deeplearningworkshop">Deep Learning Workshop</a>
                     </div>
                 </li>
                 <li class="list-group-item">
@@ -41,7 +41,7 @@
                 </li>
                 <li class="list-group-item">
                     <div class="col">
-                        <a href="/software_development_best_practices_course.html">Software Development Best Practices</a>
+                        <a href="/software_development_best_practices_course">Software Development Best Practices</a>
                     </div>
                 </li>
             </ul>
@@ -52,7 +52,7 @@
                 <div class="caption text-center h2">Presentations</div>
                 <li class="list-group-item">
                     <div class="col">
-                        <a href="/detecting_small_objects.html">Detecting small objects</a>
+                        <a href="/detecting_small_objects">Detecting small objects</a>
                     </div>
                 </li>
             </ul>
