--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </li>
                 <li class="list-group-item">
                     <div class="col">
-                        <a href="/clean_code_course.html">Clean Code Course</a>
+                        <a href="/clean_code_course">Clean Code Course</a>
                     </div>
                 </li>
                 <li class="list-group-item">
